CR-121 cleanups, renamings, documentation